tests/fixtures/power10/fail/ts-ignore.ts
export function ignoredTypeError(value: unknown): number {
  // @ts-ignore
  return value;
}
